# const-struct-version

./: Cargo.toml  README.md  deny.toml  justfile
crates/const-struct-version/: Cargo.toml
crates/const-struct-version-derive/: Cargo.toml  README.md
crates/const-struct-version-derive/src/: lib.rs
crates/const-struct-version/src/: lib.rs
crates/const-struct-version/src/snapshots/: const_struct_version__tests__arc_u32.snap  const_struct_version__tests__b_tree_map_u32_u32.snap  const_struct_version__tests__b_tree_set_u32.snap  const_struct_version__tests__binary_heap_u32.snap  const_struct_version__tests__bool.snap  const_struct_version__tests__box_u32.snap  const_struct_version__tests__char.snap  const_struct_version__tests__date_time_local.snap  const_struct_version__tests__duration.snap  const_struct_version__tests__f32.snap  const_struct_version__tests__f64.snap  const_struct_version__tests__hash_map_u32_u32.snap  const_struct_version__tests__hash_set_u32.snap  const_struct_version__tests__i128.snap  const_struct_version__tests__i16.snap  const_struct_version__tests__i32.snap  const_struct_version__tests__i64.snap  const_struct_version__tests__i8.snap  const_struct_version__tests__index_map_u32_u32.snap  const_struct_version__tests__index_set_u32.snap  const_struct_version__tests__instant.snap  const_struct_version__tests__linked_list_u32.snap  const_struct_version__tests__option_u32.snap  const_struct_version__tests__rc_u32.snap  const_struct_version__tests__string.snap  const_struct_version__tests__u128.snap  const_struct_version__tests__u16.snap  const_struct_version__tests__u32.snap  const_struct_version__tests__u64.snap  const_struct_version__tests__u8.snap  const_struct_version__tests__url.snap  const_struct_version__tests__uuid.snap  const_struct_version__tests__vec_deque_u32.snap  const_struct_version__tests__vec_u32.snap
crates/const-struct-version/tests/: compile.rs  enum_discriminants.rs  enum_tuple_variants.rs  enum_unit_variants.rs  generic_struct.rs  integration.rs  named_fields_struct.rs  nested_struct.rs  recursive_struct.rs  serde_attributes.rs  tuple_struct.rs  unit_struct.rs
crates/const-struct-version/tests/snapshots/: enum_discriminants__enum_discriminats_changes_hash-2.snap  enum_discriminants__enum_discriminats_changes_hash-3.snap  enum_discriminants__enum_discriminats_changes_hash.snap  enum_tuple_variants__enum_ordering_changes_hash-2.snap  enum_tuple_variants__enum_ordering_changes_hash.snap  enum_unit_variants__enum_unit_variants_changes_hash-2.snap  enum_unit_variants__enum_unit_variants_changes_hash.snap  generic_struct__generic_struct.snap  integration__that_different_name_same_hash 2.snap  named_fields_struct__that_versions_are_different-2.snap  named_fields_struct__that_versions_are_different.snap  nested_struct__nested_structs_work.snap  serde_attributes__main-2.snap  (+6 more)
(+28 files in other folders)
