[workspace]
members = [
    "./crates/const-struct-version",
    "./crates/const-struct-version-derive",
]
resolver = "3"

[workspace.dependencies]
const-struct-version = { path = "./crates/const-struct-version", version = "*" }
const-struct-version-derive = { path = "./crates/const-struct-version-derive", version = "*" }
indexmap = "2"
insta = "1"
mutants = "0.0.3"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
syn = "2"
chrono = "0.4"
sha1 = "0.10"
tryexpand = { git = "https://github.com/regexident/tryexpand", rev = "8527923c771c496d0bb2a546b1ed46a86446518d" }
url = "2"
uuid = "1"
