[package]
name = "const-struct-version-derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A proc-macro to generate a hash based on the fields of a struct. Useful for intelligently expiring a cache when the stored object changes."
readme = "../../README.md"
repository = "https://github.com/JosiahBull/const-struct-version"
keywords = [
    "cache",
    "hash",
    "struct",
    "derive",
    "proc-macro",
]
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
categories = ["caching", "database"]
documentation = "https://docs.rs/const-struct-version-derive"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
