[package]
name = "const-struct-version"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A trait plus proc-macro to generate a hash based on the fields of a struct. Useful for intelligently expiring a cache when the stored object changes."
readme = "../../README.md"
repository = "https://github.com/JosiahBull/const-struct-version"
keywords = ["cache", "hash", "struct", "derive", "proc-macro"]
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
categories = ["caching", "database"]
documentation = "https://docs.rs/const-struct-version"

[dependencies]
# workspace dependencies
const-struct-version-derive = { workspace = true, optional = true }

# external dependencies
indexmap = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
url = { workspace = true, optional = true }
sha1 = { workspace = true }

[features]
default = ["derive", "serde-attributes"]
serde-attributes = []

derive = ["dep:const-struct-version-derive"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
url = ["dep:url"]
indexmap = ["dep:indexmap"]

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
mutants = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tryexpand = { workspace = true }
